# mPSAT

./: README.md  build.py  config.py  convert_ui_rc.py  mpsat.qrc  mpsat.ui  mpsat_rc.py  pyproject.toml  settings.json
data/: label_mpid.json  label_name.json
examples/: PU.csv
mPSAT/: mpsat.py  mpsatApp.py  mpsatUI.py  plotter.py  splash.py  splashUI.py
mPSAT/utils/: enum.py  infer_base.py  infer_nn.py  infer_skl.py  inferrer.py  logger.py  mpsat_worker.py  msettings.py  spectroscopy.py
mPSAT/widgets/: busy_dialog.py  busy_dialogUI.py  mplot_widget.py  progress.py
src/: enum.py  infer_base.py  infer_skl.py  mpQFigureCanvas.py  mplot_widget.py  mpsat.py  mpsatApp.py  mpsatUI.py  mpsatWorker.py  mptoolsUI.py  msettings.py  spectroscopy.py  splash.py  splashUI.py
src/utils/: enum.py  infer_base.py  infer_nn.py  mpsat_worker.py
src/widgets/: busy_dialog.py  busy_dialogUI.py  mplot_widget.py
